--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "basiclightbox": "^5.0.4",
+    "lodash.debounce": "^4.0.8",
     "material-design-icons": "^3.0.1",
     "notiflix": "^3.0.2"
   }
