--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://eche-unicorn.github.io/goit-js-hw-13-image-finder",
+  "homepage": "https://AnastasiiaDaieva.github.io/goit-js-hw-13-image-finder",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-13-image-finder/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eche-unicorn/goit-js-hw-13-image-finder.git"
+    "url": "git+https://github.com/AnastasiiaDaieva/goit-js-hw-13-image-finder.git"
   },
   "keywords": [],
   "author": "Anastasiia Daieva <d.anasteysh@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/eche-unicorn/goit-js-hw-13-image-finder/issues"
+    "url": "https://github.com/AnastasiiaDaieva/goit-js-hw-13-image-finder/issues"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
